home-k8s-cluster/workloads/manifests/unifi-controller/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unifi
  annotations:
    linkerd.io/inject: enabled
