home-k8s-cluster/workloads/manifests/unifi-controller/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: unifi
spec:
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
        - name: unifi-controller
          image: lscr.io/linuxserver/unifi-controller:latest
          ports:
            - name: web-ui
              containerPort: 8443
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: ap-disocery
              containerPort: 10001
              protocol: UDP
            - name: device-comms
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: unifi-config-data
              mountPath: "/config"
      volumes:
        - name: unifi-config-data
          persistentVolumeClaim:
            claimName: unifi-config-pvc
