home-k8s-cluster/workloads/manifests/unifi-controller/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-web-ui
  namespace: unifi
spec:
  selector:
    app: unifi
  ports:
    - port: 8443
      protocol: TCP
      targetPort: web-ui
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-stun
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: ip-shared-with-traefik
spec:
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - port: 3478
      protocol: UDP
      targetPort: stun
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-ap-disocery
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: ip-shared-with-traefik
spec:
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - port: 10001
      protocol: UDP
      targetPort: ap-disocery
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-device-comms
  namespace: unifi
  annotations:
    metallb.universe.tf/allow-shared-ip: ip-shared-with-traefik
spec:
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - port: 8080
      protocol: TCP
      targetPort: device-comms
